# marketing-data-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
dbt_marketing/: dbt_project.yml
dbt_marketing/models/staging/: sources.yml  stg_marketing_daily.sql
sql_examples/: test_stg_marketing_daily.sql
src/: dashboard.py  extract_data.py  load_bigquery.py
