[project]
name = "marketing-data-pipeline"
version = "0.1.0"
description = "Marketing analytics pipeline"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "google-cloud-bigquery (>=3.38.0,<4.0.0)",
    "google-analytics-data (>=0.19.0,<0.20.0)",
    "streamlit (>=1.51.0,<2.0.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
